# fast_desmos2_workspace

./: Cargo.toml  README.md  shell.nix
fast_desmos2/: Cargo.toml  README.md  cache.json  line_counter.py  valid_expressions.txt
fast_desmos2/src/: file.rs  main.rs  math.rs  windowing.rs
fast_desmos2/src/executor/: evaluator.rs
fast_desmos2/src/executor/evaluator/: error.rs  funcs.rs
fast_desmos2/src/file/: from_web.rs
fast_desmos2/src/file/from_web/: json_tree.rs
fast_desmos2/src/windowing/: input.rs  render.rs  render_old.rs
fast_desmos2/src/windowing/render/: dyn_buf.rs  text.rs  text.vert
fast_desmos2/src/windowing/render_old/: main.rs  text.rs  ui.rs  util.rs
fast_desmos2/src/windowing/render_old/text/: dyn_buf.rs
fast_desmos2/src/windowing/shaders/: expr.wgsl  main.wgsl  ui.wgsl
fast_desmos2/tests/: test_page.json  test_page1.json  test_page1_file_result.txt  test_page1_result.json  test_page2.json  test_page2_file_result.txt  test_page2_result.json  test_page_file_result.txt  test_page_result.json
fast_desmos2_comms/: Cargo.toml
fast_desmos2_comms/src/: lib.rs  value.rs
fast_desmos2_comms/src/value/: ops.rs  serde.rs
fast_desmos2_fonts/: Cargo.toml
fast_desmos2_fonts/src/: fonts.rs  glyph_data.rs  layout.rs  lib.rs
fast_desmos2_gl/: Cargo.toml
fast_desmos2_gl/src/: buffer.rs  error.rs  glfw.rs  lib.rs  main.rs  shader.rs  vertex.rs
fast_desmos2_parser/: Cargo.toml
fast_desmos2_parser/src/: lexing.rs  lib.rs  parsing.rs
fast_desmos2_parser/src/lexing/: error.rs  span.rs
fast_desmos2_parser/src/parsing/: node.rs  (+1 more)
fast_desmos2_render/: Cargo.toml
fast_desmos2_render/src/: apps.rs  gl_safe.rs  input.rs  main.rs
fast_desmos2_render/src/apps/: text.rs
fast_desmos2_render/src/apps/shader/: text.frag  text.vert
fast_desmos2_render/src/gl_safe/: buffer.rs  error.rs  info.rs  shader.rs  vertex.rs
fast_desmos2_tree/: Cargo.toml
fast_desmos2_tree/src/: main.rs  tests.rs  tree.rs
fast_desmos2_tree/src/tree/: actions.rs  debug.rs  movement.rs
fast_desmos2_tree/src/tree/actions/: search_back.rs
fast_desmos2_tree_parser/: Cargo.toml
fast_desmos2_tree_parser/src/: builtins.rs  lib.rs  parsing.rs  tests.rs  tree.rs
fast_desmos2_utils/: Cargo.toml
fast_desmos2_utils/src/: iter.rs  lib.rs  options.rs  vecs.rs
(+7 files in other folders)
