[package]
name = "fast_desmos2"
version = "0.1.0"
edition = "2021"

[dependencies]
# ouroboros = "0.18.4"
# winnow = "0.6.20"
thiserror = "1"
serde_json = "1"
bitflags = "2"
winit = "0.30.5"
wgpu = "23"
pollster = "0.3.0"
self_cell = "1"
skrifa = "0.22.3"
http_req = { version = "0.12.0", default-features = false, features = ["rust-tls"] }
serde = { version = "1", features = ["derive"] }
color-eyre = { version = "0.6.3", default-features = false, features = ["track-caller"] }
glam = { version = "0.29.0", features = ["glam-assert", "bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }
image = { version = "0.25.2", default-features = false, features = ["png"] }
# elsa = "1.10.0"
ariadne = "0.4.1"
take_mut = "0.2.2"
glium = "0.36.0"
fast_desmos2_parser = { path = "../fast_desmos2_parser" }
fast_desmos2_utils = { path = "../fast_desmos2_utils" }

[dependencies.fast_desmos2_comms]
path = "../fast_desmos2_comms"
default-features = false
features = ["server"]

